Bug fix in removing. Add `val_tmp`.
	modified:   src/data_structures/btree.org
	modified:   src/data_structures/btree_m.F90
	modified:   src/data_structures/tuple2_btree_m.F90

--- a/src/data_structures/btree.org
+++ b/src/data_structures/btree.org
@@ -625,15 +625,18 @@ B木から `key` を削除する.
        !>   c'
        block
          ${key} :: key_tmp
+         ${val} :: val_tmp
          type(${btree_node_ptr}) :: prev
          prev%p_ => x%p_%children_(pos)%p_
          do while (.not. prev%is_leaf())
             prev%p_ => prev%p_%children_(prev%size()+1)%p_
          end do
          key_tmp = prev%p_%key_(prev%size())
+         val_tmp = prev%p_%val_(prev%size())
          ! write(error_unit, '(a, *(i0, 1x))') "prev: ", key_tmp, key
          call x%remove(key_tmp)
          x%p_%key_(pos) = key_tmp
+         x%p_%val_(pos) = val_tmp
          ! write(error_unit, '(a, 2(i0, 1x))') "pattern 2a end: ", key, key_tmp
          return
        end block
@@ -652,15 +655,18 @@ B木から `key` を削除する.
        !>     c'
        block
          ${key} :: key_tmp
+         ${val} :: val_tmp
          type(${btree_node_ptr}) :: next
          next%p_ => x%p_%children_(pos+1)%p_
          do while (.not. next%is_leaf())
             next%p_ => next%p_%children_(1)%p_
          end do
          key_tmp = next%p_%key_(1)
+         val_tmp = next%p_%val_(1)
          ! write(error_unit, '(a, *(i0, 1x))') "next: ", key, key_tmp
          call x%remove(key_tmp)
          x%p_%key_(pos) = key_tmp
+         x%p_%val_(pos) = val_tmp
          ! write(error_unit, '(a, 2(i0, 1x))') "pattern 2b end: ", key, key_tmp
          return
        end block
